--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -25,7 +25,7 @@
 
   .container {
     margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
-    overflow-x: hidden;
+    /* overflow: hidden; */
   }
 
   .search {
